--- a/testing.ipynb
+++ b/testing.ipynb
@@ -16,10 +16,11 @@
     "import torch\n",
     "import torch.autograd as autograd\n",
     "import numpy as np\n",
+    "import numpy.random as npr\n",
     "import pandas as pd\n",
     "from PIL import Image, ImageDraw\n",
     "\n",
-    "from src.region_proposal import RegionProposalNetwork\n",
+    "from src.region_proposal import RegionProposalNetwork, get_target_weights\n",
     "from src.smooth_l1_loss import SmoothL1LossFunc\n",
     "from src.generate_anchors import generate_anchors\n",
     "from src.generate_anchor_data import AnchorDataGenerator"
@@ -46,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -60,86 +63,92 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "rpn = RegionProposalNetwork()\n",
-    "anchor_generator = AnchorDataGenerator()"
+    "anchor_generator = AnchorDataGenerator()\n",
+    "log_softmax = torch.nn.LogSoftmax()\n",
+    "nll_loss = torch.nn.NLLLoss2d(weight=get_target_weights())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "obj_scores, regressions = rpn(input)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "132\n"
-     ]
-    }
-   ],
-   "source": [
-    "anchors, labels, bbox_target, bbox_weights = anchor_generator(obj_scores, gt_boxes, im_w, im_h)\n",
-    "anchors = anchors.data.numpy()\n",
-    "labels = labels.data.numpy()\n",
-    "bbox_target = bbox_target.data.numpy()\n",
-    "bbox_weights = bbox_weights.data.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "image_draw = ImageDraw.Draw(image)"
+    "obj_scores, regressions = rpn(input)\n",
+    "labels, bbox_target, bbox_weights = anchor_generator(obj_scores, gt_boxes, im_w, im_h)\n",
+    "\n",
+    "obj_scores = obj_scores.resize(1, 2, 9*obj_scores.size(2), obj_scores.size(3))\n",
+    "labels = labels.resize(1, labels.size(2), labels.size(3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "for i in range(gt_boxes.size(0)):\n",
-    "    image_draw.rectangle(gt_boxes.data.numpy()[i, :].tolist(), outline=\"white\")"
+    "scores = log_softmax(obj_scores)\n",
+    "scores = torch.cat((scores, autograd.Variable(torch.zeros([1, 1, obj_scores.size(2), obj_scores.size(3)]))), 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "_labels = labels.reshape(1, 9, obj_scores.size(2), obj_scores.size(3)).transpose(0, 2, 3, 1).ravel()\n",
-    "fg_anchors = anchors[_labels == 1.0, :]\n",
-    "bg_anchors = anchors[_labels == 0.0, :]\n",
-    "\n",
-    "for i in range(fg_anchors.shape[0]):\n",
-    "       image_draw.rectangle(fg_anchors[i, :].tolist(), outline=\"blue\")"
+    "loss = nll_loss(scores, labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variable containing:\n",
+       " 3.4918\n",
+       "[torch.FloatTensor of size 1]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
