- changed dataste's image format from RGB to BGR to match VGG pretrained model. - changed weight initialization method to avoid weight exploding when input image is not normalized. - stopped backpropagated at VGG's 2nd convolutional layer. - improved user input for train_rpn program

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -13,12 +13,13 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from PIL import Image, ImageDraw\n",
+    "import cv2\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.autograd import Variable\n",
     "import torch.optim as opt\n",
     "import torch.nn as nn\n",
     "import torch\n",
+    "from torchvision.models import vgg16\n",
     "\n",
     "import numpy as np\n",
     "from src.voc_dataset import *\n",
@@ -28,135 +29,9 @@
     "from src.anchor_util import generate_all_anchors\n",
     "from src.proposal import ProposalGenerator\n",
     "\n",
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "dataset = VOCDataSet(\"data/\", \"train\", include_gt_lable=True)\n",
-    "dataloader = DataLoader(dataset, batch_size=1, shuffle=True, num_workers=5, collate_fn=collate_fn)\n",
-    "iterator = iter(dataloader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "rpn = RegionProposalNetwork().cuda()\n",
-    "anchor_generator = AnchorDataGenerator().cuda()\n",
-    "log_softmax_func = nn.LogSoftmax().cuda()\n",
-    "nll_loss_func = nn.NLLLoss2d(weight=get_target_weights(), size_average=False).cuda()\n",
-    "regression_loss_func = nn.SmoothL1Loss(size_average=False).cuda()\n",
-    "\n",
-    "optimizer = opt.SGD(\n",
-    "         rpn.parameters(),\n",
-    "         lr=0.001,\n",
-    "         momentum=0.9,\n",
-    "         weight_decay=0.0005,\n",
-    "     )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "a = []\n",
-    "for i in range(200):    \n",
-    "    image_arr, gt, labels = iterator.next()\n",
-    "    image_arr = Variable(image_arr).cuda()\n",
-    "    gt = Variable(gt)\n",
-    "    logits, regressions = rpn(image_arr)\n",
-    "\n",
-    "    width = Variable(torch.Tensor([logits.size(3)]))\n",
-    "    height = Variable(torch.Tensor([logits.size(2)]))\n",
-    "    im_w = Variable(torch.Tensor([image_arr.size(3)]))\n",
-    "    im_h = Variable(torch.Tensor([image_arr.size(2)]))\n",
-    "\n",
-    "    labels, bbox_targets, bbox_inside_weights, regression_norm = \\\n",
-    "                    anchor_generator(width, height, gt, im_w, im_h)\n",
-    "\n",
-    "    logits = logits.view(1, 2, 9 * logits.size(2), logits.size(3))\n",
-    "    labels = labels.view(1, labels.size(2), labels.size(3)).cuda()\n",
-    "    bbox_inside_weights = bbox_inside_weights.cuda()\n",
-    "    bbox_targets = bbox_targets.cuda()\n",
-    "    regression_norm = regression_norm.cuda()\n",
-    "\n",
-    "    log_softmax = log_softmax_func(logits)\n",
-    "    log_softmax = torch.cat(\n",
-    "        (\n",
-    "            log_softmax,\n",
-    "            Variable(torch.zeros([1, 1, log_softmax.size(2), log_softmax.size(3)])).cuda()\n",
-    "        ), 1)\n",
-    "    nll_loss = nll_loss_func(log_softmax, labels) / 256.\n",
-    "\n",
-    "    regressions = torch.mul(regressions, bbox_inside_weights)\n",
-    "    bbox_targets = torch.mul(bbox_targets, bbox_inside_weights)\n",
-    "    regression_loss = regression_loss_func(regressions, bbox_targets) * (regression_norm + 1e-4)\n",
-    "\n",
-    "    loss = nll_loss + regression_loss\n",
-    "    loss.backward()\n",
-    "\n",
-    "    l = []\n",
-    "    for m in rpn.modules():\n",
-    "        if isinstance(m, nn.Conv2d):\n",
-    "            l.append(m.weight.grad.data.norm())\n",
-    "        elif isinstance(m, nn.Linear):\n",
-    "            l.append(m.weight.grad.data.norm())\n",
-    "    a.append(l[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9450ef2990>]"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHu1JREFUeJzt3XuUm3d95/H3V9Jo7hePZzwZX8e3OIQE21nHhCYb0iRA\nSKEJl7bQloY9KaEsXaCn0FI43S5tt6e0XFq6PVkCSQldSoEAJaWUkqSBNL2YOMRxnDiJHXvGt7Hn\nfpNG0kj67h+SUxM8HnksjaRHn9c5OpIePbK+Tx7n459++j7PY+6OiIhUv1C5CxARkeJQoIuIBIQC\nXUQkIBToIiIBoUAXEQkIBbqISEAo0EVEAkKBLiISEAp0EZGAiCzlh3V1dXlfX99SfqSISNV7/PHH\nR9y9e6H1ljTQ+/r62L1791J+pIhI1TOzgULW05SLiEhAKNBFRAJCgS4iEhAKdBGRgFCgi4gEhAJd\nRCQgFOgiIgGhQBcRKaGhqQQf+/unmZydK/lnLemBRSIitWImmeauRw7xuUcOMZfJcvXGLm68tKek\nn6lAFxE5D5msMzg5SzrjZNxJzmWZiKcYi6cYmU4yMBZnYDTOnqMTjMVS/MwrevnQa7fQ19Vc8toU\n6CIiBRiLpfjKY0f50q4Bjo3PzrteczTM2uXNXL2pi9uvWc+2NR1LVqMCXURqQjyVZmQ6RSqTJZXO\nkkhnSKQyzM5lSMxlSaYzpNJZYqkM04k5pmbTTMymGI+lGIul2H9ymlQ6y1UbOvm1V2+kKRomHDKi\n4RAdTVE6m6Msb4myvDmKmZVlGxXoIhJ47s4Nn/wBg5OJgt/THA3T3lhHZ0uUzuZ6fumVa3n7zrVc\n3NNawkovzIKBbmYNwCNAfX79+9z998zsC8Crgcn8qu909z2lKlREZLFOTSUZnEzw8ztWc/WmLqLh\nEA3RMI11uVtDXZj6SIhoJERTNExLfYRIuPqaAAsZoSeB6919xszqgEfN7B/zr33I3e8rXXkiIhfu\n0PAMALdsW8XVm7rKXE3pLBjo7u7ATP5pXf7mpSxKRKSYXhiJAbChu/SdJuVU0HcKMwub2R5gCHjA\n3XflX/rfZrbXzD5tZvUlq1JE5AIcGp6hKRrmoraGcpdSUgUFurtn3H0bsBrYaWaXAb8DXAJcCXQC\nv32295rZHWa228x2Dw8PF6lsEZHCHRqOsaG7uWzdJ0vlvGb93X0CeBi4yd0HPScJ/BWwc5733OXu\nO9x9R3f3gpfEExEpuheGZ9jQ1VLuMkpuwUA3s24z68g/bgReAzxrZr35ZQbcCuwrZaEiIouRmMtw\nfGI28PPnUFiXSy9wr5mFyf0D8FV3/7aZ/bOZdQMG7AF+rYR1iogsSv9oDHfY0B38EXohXS57ge1n\nWX59SSoSESmiQ8P5DpclOJdKuVVf57yIyHk43YNeC1MuCnQRCbRDwzF62xtoigb/TCcKdBEJtBdG\nYmysgflzUKCLSIC5O4eGZ2piugUU6CISYMMzSaYT6Zr4QRQU6CISYC92uGjKRUSkuv1noGuELiJS\n1Q4Nz9BQF2Jle2O5S1kSCnQRCaxDIzH6ljcTCgX7pFynKdBFJLAODc+wcUVtzJ+DrikqIlUulc6y\n6/AoB07N0D8ao380zvB0ktGZJEPTSX5268pyl7hkFOgiUhXSmSwzyTSpdJZkOsvQdJL79xzn/idP\nMB6fA6C1IcL6rmZWdTSydXU7XS31/OIr15W58qWjQBeRivX4wBi/8ZUnGYulmEmmf+L1aCTEay/t\n4U3bV7FtTQedzdHAX8TiXBToIlKxvv/cMMfG47zzp9bT1hihtaGO+kiIaCREczTCNZu7aG+sK3eZ\nFUOBLiIVq380zuplTfzPN15a7lKqgrpcRKRi9Y/EWLe8qdxlVA0FuohUJHenfyTG+ho5D0sxKNBF\npCKNxlJMJ9P0LVegF0qBLiIVqX8kdx4WjdALt2Cgm1mDmf3QzJ40s6fN7GP55evNbJeZHTSzr5hZ\ntPTlikitOJwP9D4FesEKGaEngevdfSuwDbjJzK4CPg582t03AePA7aUrU0RqTf9ojHDIWL2sNk6s\nVQwLBrrnzOSf1uVvDlwP3Jdffi9wa0kqFJGa1D8SZ82yRurCmhkuVEH/pcwsbGZ7gCHgAeAFYMLd\nTx+6dQxYNc977zCz3Wa2e3h4uBg1i0gNODwS03TLeSoo0N094+7bgNXATuCSQj/A3e9y9x3uvqO7\nu3uRZYpILXF3+kdj6nA5T+f1XcbdJ4CHgVcBHWZ2+kjT1cDxItcmIjVqeDpJPJVRh8t5KqTLpdvM\nOvKPG4HXAPvJBftb86vdBnyrVEWKSG1Rh8viFHIul17gXjMLk/sH4Kvu/m0zewb4WzP7Q+AJ4O4S\n1ikiNaR/NN+DrimX87JgoLv7XmD7WZYfIjefLiJSVP2jcerCxsqOhnKXUlXUDyQiFad/JMaaziYi\nalk8L/qvJSIV5/CIOlwWQ4EuIhXF3RkYjSvQF0GBLiIV5dRUktm5DOu7dB7086VAF5GKopbFxVOg\ni0hF2XN0AkBTLouga4qKSEXYe2yCP/2n5/iXAyNc3NPCyg6dZfF8KdBFZMmkM1mOjc8yFk8xHksx\nMBrn6RNTPH1ikmdPTrOsqY6P3vwy3vGqdYRDVu5yq44CXUSWxMhMktvu+SFPn5j6seVdLfVcvqqN\nW7at4pevWktrQ12ZKqx+CnQRKbnByVl++fO7OD4xy++98VL6ljfT2Rylt72BFW06GrRYFOgiUjLp\nTJbnTk3z7r9+nIn4HPf+t528csPycpcVWAp0ESnY0bE49z95grFYimQ6Q2Iuy3RijsnZOSZn07g7\nkbARCYUYj6c4Pj5LOut0NNXxpV99JVvXdJR7EwJNgS4i80qmMxwbn2X/4BRf232MRw4M4w4t9RHq\nIyHqIyFaG+pob6xjVUcj4RDMZZy5TJY1nU284RW9rO1s4prN3axS10rJKdBFatTxiVl+8Nwwe46O\nE0tlSKQyzM5liKcyxFNppmbTnJpO4J5b/6K2Bt53/WZ+4co1aimsUAp0kYCYnJ3j6Fic8XiKTNZx\nh1QmSyyZJpbKMDU7x9BUgqHpJAeGZjg4lLv2e1dLlPbGOhqjYRoiYdoa67iorYHm+girlzWybnkT\n65Y3s3V1u85+WOEU6CIVLnd9zTiP9Y9xZDTOqXwoTyfmSMxlSaYzjMykmJydW/DPam2I0NPWwOpl\njbztyjVct6Wbjd0tmKnnOwgU6CIV5PjELJ975BBD0wnSGSeZzvLM4BTD00kAwiGjqyXKitYGOprq\n6GwOUR8J09FUx7rlTaztbGJ5Sz0hM0IGdeEQLfURmurDtNbnRuESXAp0kQoQT6X5v99/gc8+cggH\n1nY2EQkZdeEQV29czpXrO9nZ18mG7hYdQSnzWjDQzWwN8EWgB3DgLnf/czP7X8C7gOH8qh9x9++U\nqlCRoDgyGudvfniEf9w3SGIuA0AsmWEmmeaNW1fy4ddfoo4QWZRCRuhp4Dfd/Udm1go8bmYP5F/7\ntLt/onTliQTHyEySD37tSb7/3DDhkHHt5i568kdJhkPGm7avYkdfZ5mrlGpWyEWiB4HB/ONpM9sP\nrCp1YSJB8/t//wz/dnCU37jxYn7hyjVc1K5D3qW4zqsHycz6gO3ArvyiXzezvWZ2j5ktK3JtIoHx\n6IER7n/yBO+5biPvv3GzwlxKouBAN7MW4OvAB9x9CrgT2AhsIzeC/+Q877vDzHab2e7h4eGzrSIS\naIm5DL/7rX30LW/iPddtLHc5EmAFBbqZ1ZEL8y+5+zcA3P2Uu2fcPQt8Dth5tve6+13uvsPdd3R3\ndxerbpGq8dkfHOLwSIzfv+UyGurUNiilU0iXiwF3A/vd/VNnLO/Nz68DvAnYV5oSRapHPJXmkedH\neOLIOPFUhsRchm89eYI3vKKXay/WgEZKq5Aul6uBdwBPmdme/LKPAG83s23kWhn7gXeXpEKRCjSX\nyXJkLM6RsTgnJxMMTszy9IkpHj04QjKdJRoJ0RwN01gXZuvqdn73DZeWu2SpAYV0uTwKnO1IBvWc\nS8355hPH+MxDBzkyFieT9ReXm+UOBnr7zrW89uU9XNnXSZ3OeyJLTEeKipyHbz5xgulEmve8eiPr\nu5rp62qit72R7tZ6BbiUnQJd5DwcHYvzyvWdfPB1W8pdishP0JBCpECZrHNsPM6azqZylyJyVgp0\nkQKdnEowl3HWKtClQinQRQp0ZDQOoECXiqVAFynQ0TEFulQ2BbpIgY6MxQmHjJUdOg+LVCYFukiB\njozFWdXRqOtqSsXS30yRAh0Zi2u6RSqaAl2kQEfH1LIolU2BLlKAmWSa0VhKI3SpaAp0kQKow0Wq\ngQJdpABHFOhSBRToIgXQCF2qgQJdpAADo3HaGiK0N9WVuxSReSnQRQpwZCzO2uUanUtlU6CLFOCo\netClCijQRRaQO23urHrQpeIp0EUWcGoqQSqT1QhdKt6CgW5ma8zsYTN7xsyeNrP355d3mtkDZnYg\nf7+s9OWKLD21LEq1KGSEngZ+090vBa4C3mtmlwIfBh5y983AQ/nnIoGjQJdqsWCgu/ugu/8o/3ga\n2A+sAm4B7s2vdi9wa6mKFCmno2NxQgYrOxrLXYrIOZ3XRaLNrA/YDuwCetx9MP/SSaBnnvfcAdwB\nsHbt2sXWKbIkJuNzPH5kjMf6xxmaSpLOZnniyAQrOxqp02lzpcIVHOhm1gJ8HfiAu0+Z2Yuvubub\nmZ/tfe5+F3AXwI4dO866jkixZLJOPJUmnsownUgzPJ1kaDrB8HSSeCpDKp0llcmSzeb+KjowHktx\nYnKWwckEA/nLzNWFjRWtDdSFjbqw8TOvWFXGrRIpTEGBbmZ15ML8S+7+jfziU2bW6+6DZtYLDJWq\nSJFCPHNiijff+a8k5rLzrhMyiEZChM8YkHQ0Reltb+DyVe289YrVXLm+k62rO2iMhpeibJGiWTDQ\nLTcUvxvY7+6fOuOl+4HbgD/O33+rJBWKFOizj7xAJBTiozdvobk+QnN9mK6Wenra6ulubaA5GtbV\nhiTQChmhXw28A3jKzPbkl32EXJB/1cxuBwaAny9NiSILOzExyz/sHeSdP9XHu67dUO5yRMpiwUB3\n90cBm+flG4pbjsji3Pvv/WTdeefVfeUuRaRs9P1Tqt5MMs3f7DrC6y/vZfUy9YpL7VKgS9X72u6j\nTCfS/Oo168tdikhZnVcfukilSKYzJOayJNMZ7vnXw+xYt4zta3X2CaltCnSpGu7OowdH+Py/HOYH\nzw//2GsfvfllZapKpHIo0KViuDvDM0lOTCQYj6UYi6UYj//n/Y8GJnju1DRdLfW8+9Ub6G6ppz4S\nYllzlNe9/KJyly9Sdgp0KYvnTk7z/eeGGJxMcGoqwZGxOAOjcWaS6Z9YNxIyljVHWbOskU/83Fbe\nuLWX+ogO+hF5KQW6lMVvf30ve45O0FIf4aL2BlZ1NHJlXyd9y5tYvayJzpYoy5ujdDRFaWuIcOap\nJkTk7BTosuSyWef5U9Pc9qp1fOyWy8pdjkhgqG1RltyJyVniqQxbLmordykigaJAlyV3YGgGgM09\nLWWuRCRYFOiy5A6eygX6pm4FukgxKdBlyR0YyrUeLmuOlrsUkUBRoMuSOzA0w+YVGp2LFJsCXZaU\nu3NwaIZNCnSRolOgy5Iamk4ynUjrB1GRElCgy5I6cPoHUY3QRYpOgS5L6sDQNACbV7SWuRKR4FGg\ny5I6MDRDR1MdXS3qcBEptgUD3czuMbMhM9t3xrL/ZWbHzWxP/nZzacuUoDh4KtfhonOziBRfISP0\nLwA3nWX5p919W/72neKWJUHk7jw/NM0mTbeIlMSCge7ujwBjS1CLBNxoLMVEfE496CIlciFz6L9u\nZnvzUzK69pcs6HSHi1oWRUpjsYF+J7AR2AYMAp+cb0Uzu8PMdpvZ7uHh4flWkxpwUB0uIiW1qEB3\n91PunnH3LPA5YOc51r3L3Xe4+47u7u7F1ikBcGBohtb6CD1t9eUuRSSQFhXoZtZ7xtM3AfvmW1dk\nKjHHg8+c4tGDI2zqUYeLSKkseMUiM/sycB3QZWbHgN8DrjOzbYAD/cC7S1ijVKnEXIb3ffkJHtx/\niqxDfSTEL+5cW+6yRAJrwUB397efZfHdJahFAsTd+a379vK9Z05xx7Ub+OktK9i+toOGOl3cWaRU\ndE1RKYnPPHSQ+588wYdet4X3/vSmcpcjUhMU6FI0c5ksozMpHn5uiE8/+DxvuWI1//26jeUuS6Rm\nKNDlgj0+MM6HvvYkh0ZiLy7b2dfJH735Mv0AKrKEFOiyaO7Ovf/Wzx/+w35WdjTygRs3091az4rW\nBq7Z1EV9RPPlIktJgS7nlM06M6k0JycTHB+fZXAyQSyZJpZKs+/4JA/uH+LGl63gkz+/jfbGunKX\nK1LTFOg1LjGX4anjk/xoYJz9g1MMzyQZmU4xGksRT6WJpzLzvrelPsKHXreF97x6I6GQplZEyk2B\nHiAT8RRPHZ/k5GSCk5MJZlJp3POj7GSaU1MJTk4lmYynSGWcdDbLTCJNOusArOpopKetnnXLm7hi\nXQct9REaoxFa6sP0tjeysqOR3vYGWhsiNEUjhBXiIhVFgR4g7/ribh7rH3/xeTQSImxGyKAxGqan\nrYGV7Q28fGUbdeEQdWGjraGOrWs62L62g64WHZIvUs0U6AHh7jx7cpo3bl3JB197MT1tDTqIR6TG\nKNADYjw+x3QizfY1Haxb3lzuckSkDHRN0YDoH831gPd1NZW5EhEpFwV6QAzkA31tp0bnIrVKgR4Q\n/SNxzGBNZ2O5SxGRMlGgB8SRsTgr2xt1dKZIDVOgB0T/aEzz5yI1ToEeEAOjcXW3iNQ4BXoATM7O\nMRZLsa5TI3SRWqZAD4Ajo3EAjdBFatyCgW5m95jZkJntO2NZp5k9YGYH8vfLSlumnMvAmHrQRaSw\nEfoXgJtesuzDwEPuvhl4KP9cymQgP0JfqykXkZq2YKC7+yPA2EsW3wLcm398L3BrkeuS89A/EqOn\nrZ6mqM7kIFLLFjuH3uPug/nHJ4GeItUjizAwGmedjhAVqXkX/KOouzvg871uZneY2W4z2z08PHyh\nHydn0T8aY91yTbeI1LrFBvopM+sFyN8Pzbeiu9/l7jvcfUd3d/ciP07mE0+lGZpO0telEbpIrVts\noN8P3JZ/fBvwreKUI+fryNjplkWN0EVqXSFti18G/h3YYmbHzOx24I+B15jZAeDG/HMpg/6RXKD3\nqQddpOYt2Bbh7m+f56UbilyLLMKLp83VCF2k5ulI0SrXPxqnszlKW0NduUsRkTJToFe5I2PqcBGR\nHAV6lYqn0vzJd59l16ExtvS0lrscEakAOrSwCrg7LwzPcHIySSzfpnjnwwc5MZngLVes5rduuqTc\nJYpIBVCgV6h0JsvR8Vm+89Qgf/fEcQ4MzfzY65dc1MqfvW07O9d3lqlCEak0CvQK8lj/GH/63ec4\nPBpjZCaJ54+/3bFuGX9w62Vs6WmlKRqmuT7C2s4mwiErb8EiUlEU6BVgNpXhE997jnv+9TAr2xu5\nfssKetrquai9kWs2daklUUQKokBfYpms84Pnh3hw/xDTiTSzqTTPnpzm2Pgs77hqHR9+/SU012u3\niMj5U3KU0ImJWZ44MkE6myXrzpHRWb66+yjHJ2ZpbYjQ1VJPY12YtZ1NfPwtr+DqTV3lLllEqpgC\nfRE8P7mdTGeZTqSZTswxO5chnXHSWefg0DTffOI4uw6PvTgPftrVm5bzkZtfxmsu7SEaUdeoiBSP\nAr0AM8k09+0+yhf/fYBDI7GC3rOhq5kP3HAxN7xsBY3RMCEzWuojdLfWl7haEalVCvQF/L//GODj\n//gs08k029Z08L4bNnO6uaQuHKKtIUJrQx0NdWHqwkYkHKKrJcqlvW2YqQtFRJaOAn0Bf/bg8/R1\nNfP7t7yc7Wt1LWwRqVyaxD2H6cQcIzMpbr68V2EuIhVPgX4OA6OnzzWuPnARqXwK9HM4nP8BVJd3\nE5FqoEA/h9MXj9DpaUWkGijQz+HwSJyetnqaovrtWEQqnwL9HPpHY7pWp4hUjQsaeppZPzANZIC0\nu+8oRlGVYmA0xo0v6yl3GSIiBSnGXMJPu/tIEf6cinK6ZXGdRugiUiU05TKP/pFcy+L6Lv0gKiLV\n4UID3YHvmdnjZnbH2VYwszvMbLeZ7R4eHr7Aj1s6/aNqWRSR6nKhgX6Nu18BvB54r5ld+9IV3P0u\nd9/h7ju6u7sv8OOWTn++B31dpwJdRKrDBQW6ux/P3w8B3wR2FqOoStA/GueitgYao+FylyIiUpBF\nB7qZNZtZ6+nHwGuBfcUqrNz6R2P0af5cRKrIhYzQe4BHzexJ4IfAP7j7d4tTVvn1j6gHXUSqy6Lb\nFt39ELC1iLVUjKnEHKOxlH4QFZGqorbFsxgYOX2WRQW6iFQPBfpZHH6xZVFz6CJSPRToZzGglkUR\nqUIK9LM4PBqjt10tiyJSXRToL5FMZ3hhaEbnQBeRqqMTfQNPHZvkL/75APuOTzI4lcAd3nHVunKX\nJSJyXmom0FPpLPFUmngqg+eXTcRT3Pn9F/j23kGWNdVx3ZYVrO1sYt3yJq6/ZEVZ6xUROV+BCPTE\nXIZTUwlOTSUZnUkyMpPk1FSSQyMzvDAUo380RjKdPet7G+vC/I/rN/GuazfQ1lC3xJWLiBRPVQf6\nowdG+MBX9jAyk/yJ10IGazub2LSihWsv7qKjKUpjXZjGaJhwyAAIm/FfL+5iRWvDUpcuIlJ0VRvo\n7s6f/NOz1EdCfPC1F9PT1kBPWwNdLfV0tUbpbIoSCes3XxGpHVUb6LsHxtl7bJI/uPUy/YApIkIV\nty3e/S+HaW+s4y1XrCp3KSIiFaEqA/3oWJzvPXOSX3zlWpqiVfslQ0SkqKoy0L/wb/2EzPiVV2mq\nRUTktKoL9OnEHF957Cg3X95Lb3tjucsREakYVRfo/+fhg8wk09x+zfpylyIiUlGqKtA/89ABPvuD\nQ/zCjjVsXdNR7nJERCpK1QT6Xzx0gE898DxvuWI1f/Tmy8tdjohIxbmgQDezm8zsOTM7aGYfLlZR\nL/WXDx/kkw88z5u3r+JP3vqKF4/0FBGR/7ToQDezMPCXwOuBS4G3m9mlxSrsTOu7mvm5/7KaP/25\nrQpzEZF5XEgT907gYP5i0ZjZ3wK3AM8Uo7Az3Xx5Lzdf3lvsP1ZEJFAuZMplFXD0jOfH8stERKQM\nSv6jqJndYWa7zWz38PBwqT9ORKRmXUigHwfWnPF8dX7Zj3H3u9x9h7vv6O7uvoCPExGRc7mQQH8M\n2Gxm680sCrwNuL84ZYmIyPla9I+i7p42s18H/gkIA/e4+9NFq0xERM7LBZ2q0N2/A3ynSLWIiMgF\nqJojRUVE5NwU6CIiAWHuvnQfZjYMDCzy7V3ASBHLqRa1uN21uM1Qm9tdi9sM57/d69x9wTbBJQ30\nC2Fmu919R7nrWGq1uN21uM1Qm9tdi9sMpdtuTbmIiASEAl1EJCCqKdDvKncBZVKL212L2wy1ud21\nuM1Qou2umjl0ERE5t2oaoYuIyDlURaAv1ZWRysnM1pjZw2b2jJk9bWbvzy/vNLMHzOxA/n5ZuWst\nNjMLm9kTZvbt/PP1ZrYrv7+/kj9XUKCYWYeZ3Wdmz5rZfjN7VdD3tZn9Rv7v9j4z+7KZNQRxX5vZ\nPWY2ZGb7zlh21n1rOZ/Jb/9eM7viQj674gN9Ka+MVGZp4Dfd/VLgKuC9+e38MPCQu28GHso/D5r3\nA/vPeP5x4NPuvgkYB24vS1Wl9efAd939EmArue0P7L42s1XA+4Ad7n4ZufM/vY1g7usvADe9ZNl8\n+/b1wOb87Q7gzgv54IoPdM64MpK7p4DTV0YKFHcfdPcf5R9Pk/sffBW5bb03v9q9wK3lqbA0zGw1\n8DPA5/PPDbgeuC+/ShC3uR24FrgbwN1T7j5BwPc1uXNHNZpZBGgCBgngvnb3R4Cxlyyeb9/eAnzR\nc/4D6DCzRV+erRoCveaujGRmfcB2YBfQ4+6D+ZdOAj1lKqtU/gz4LSCbf74cmHD3dP55EPf3emAY\n+Kv8VNPnzayZAO9rdz8OfAI4Qi7IJ4HHCf6+Pm2+fVvUfKuGQK8pZtYCfB34gLtPnfma51qSAtOW\nZGZvAIbc/fFy17LEIsAVwJ3uvh2I8ZLplQDu62XkRqPrgZVAMz85LVETSrlvqyHQC7oyUhCYWR25\nMP+Su38jv/jU6a9g+fuhctVXAlcDP2tm/eSm0q4nN7fckf9aDsHc38eAY+6+K//8PnIBH+R9fSNw\n2N2H3X0O+Aa5/R/0fX3afPu2qPlWDYFeE1dGys8d3w3sd/dPnfHS/cBt+ce3Ad9a6tpKxd1/x91X\nu3sfuf36z+7+S8DDwFvzqwVqmwHc/SRw1My25BfdADxDgPc1uamWq8ysKf93/fQ2B3pfn2G+fXs/\n8Cv5bpergMkzpmbOn7tX/A24GXgeeAH4aLnrKdE2XkPua9heYE/+djO5OeWHgAPAg0BnuWst0fZf\nB3w7/3gD8EPgIPA1oL7c9ZVge7cBu/P7+++AZUHf18DHgGeBfcBfA/VB3NfAl8n9TjBH7tvY7fPt\nW8DIdfG9ADxFrgto0Z+tI0VFRAKiGqZcRESkAAp0EZGAUKCLiASEAl1EJCAU6CIiAaFAFxEJCAW6\niEhAKNBFRALi/wPgQvhhe+3gWwAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f94512aff10>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.plot(np.arange(0, 100), a)"
+    "import pickle\n",
+    "from os import listdir\n",
+    "from os.path import join"
    ]
   },
   {
